# cppProjects

./: Новый текстовый документ.txt
FileReadWrite/: CMakeLists.txt  main.cpp
Hello_world/: CMakeLists.txt  main.cpp
_Linux/FileReadWrite/: CMakeLists.txt  main.cpp  print_functions.h
_Linux/_From old Windows/BuildingPrj/: Building_window.h  CMakeLists.txt  main.cpp
_Linux/_From old Windows/ErrorCatch/: CMakeLists.txt
_Linux/_From old Windows/NewDelete/: main.cpp
_Linux/_From old Windows/Recursion/: main.cpp
_Linux/_From old Windows/String/: main.cpp
_Linux/_From old Windows/TemplateTest/: CMakeLists.txt  main.cpp
_Linux/_From old Windows/Test01/: CMakeLists.txt  main.cpp
_Linux/_From old Windows/pointers/: main.cpp
_Windows/BuildingPrj/: Building_window.h
_Windows/CUDAtest/: CMakeLists.txt
_Windows/ConsoleTest/: CMakeLists.txt  main.cpp
_Windows/ConsoleTest/guide/: ConsoleTest.txt  README.docx  globalOut.txt  meow.txt  nyan.txt  out2.txt  script.bat  script2.bat
_Windows/ErrorCatch/: CMakeLists.txt  main.cpp
_Windows/NewDelete/: CMakeLists.txt
_Windows/_OpenGL/001_Hello_world/: CMakeLists.txt  main.cpp
_Windows/_OpenGL/002/: CMakeLists.txt  main.cpp
_Windows/_OpenGL/003/: CMakeLists.txt  main.cpp
_Windows/_OpenGL/004/: CMakeLists.txt  main.cpp  myCode.cpp  myHeader.h
_Windows/_OpenGL/NewGLUT/: CMakeLists.txt  main.cpp
_Windows/_OpenGL/PaintTools/: Angles.cpp  Angles.h  Angles_math.cpp  CMakeLists.txt  Coordinates.cpp  Coordinates.h  Coordinates_math.cpp  PaintTools.cpp  PaintTools.h  main.cpp  myCode.cpp  myHeader.h
_Windows/_OpenGL/PaintTools/temp/: main(testing).cpp  main.cpp
_Windows/_Time/time_test01/: CMakeLists.txt  main.cpp
_Windows/_WindowsAPI/Console01/: CMakeLists.txt  main.cpp
_Windows/_WindowsAPI/visualTest/: CMakeLists.txt  main.cpp
_Windows/pointers/: main.cpp
